# sfa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  ROADMAP.md  install.sh
.codex/skills/release-manager/: SKILL.md
.codex/skills/release-manager/agents/: openai.yaml
.codex/skills/release-manager/references/: release-output.md
.github/workflows/: ci.yml  release.yml
benches/: README.md
benches/results/: README.md  baseline-v0.1.0.json
benches/scripts/: run_tar_vs_sfa.sh
benches/workloads/node-modules-100k/: README.md  recipe.json
crates/sfa-bench/: Cargo.toml
crates/sfa-bench/src/: harness.rs  lib.rs  report.rs  runner.rs  workload.rs
crates/sfa-cli/: Cargo.toml
crates/sfa-cli/src/: app.rs  cli.rs  error.rs  lib.rs  main.rs  output.rs  service.rs
crates/sfa-cli/tests/: cli_regressions.rs  stdin_unpack.rs
crates/sfa-core/: Cargo.toml
crates/sfa-core/src/: archive.rs  codec.rs  config.rs  error.rs  format.rs  integrity.rs  lib.rs  model.rs  planner.rs  stats.rs
crates/sfa-unixfs/: Cargo.toml
crates/sfa-unixfs/src/: archive.rs  diagnostics.rs  error.rs  lib.rs  path.rs  restore.rs  scan.rs
openspec/changes/add-homebrew-and-install-script-distribution/: tasks.md
openspec/changes/add-stage-observability-to-benchmarks/: design.md  tasks.md
openspec/changes/bootstrap-sfa-v1/: design.md
openspec/changes/close-m3-and-prepare-v1-release/: proposal.md  tasks.md
openspec/changes/freeze-v1-format-and-fixtures/: design.md  proposal.md
openspec/changes/optimize-unpack-setup-and-small-file-scatter/: design.md  proposal.md  tasks.md
openspec/changes/rename-cli-binary-to-sfa/: proposal.md  tasks.md
openspec/changes/rewrite-readme-for-user-onboarding/: design.md
openspec/changes/separate-unpack-wall-and-busy-phase-stats/: design.md  proposal.md  tasks.md
openspec/changes/stabilize-benchmark-baseline/: design.md  tasks.md
openspec/specs/archive-format-v1/: spec.md
openspec/specs/archive-pack/: spec.md
openspec/specs/archive-unpack/: spec.md
openspec/specs/cli-and-benchmarks/: spec.md
openspec/specs/cli-distribution/: spec.md
openspec/specs/readme-user-onboarding/: spec.md
openspec/specs/release-readiness/: spec.md
openspec/specs/unpack-performance/: spec.md
openspec/specs/unpack-setup-performance/: spec.md
release-notes/: v0.2.0.md  v0.3.0.md  v1.0.0.md
scripts/release/: generate_homebrew_formula.sh  publish_homebrew_formula.sh  validate_distribution_assets.sh
sfa-tech-solution/: 01-overview.md  02-requirements-and-scope.md  03-architecture.md  04-format-v1.md  05-workflows-and-algorithms.md  06-module-and-interface-design.md  07-reliability-performance-security.md  08-testing-benchmark-and-roadmap.md  README.md  index.md
spec/: README.md  format-v1-freeze-review.md  format-v1.md  verification-and-benchmark.md
tests/: README.md
tests/corruption/: README.md
tests/fixtures/: README.md
tests/fixtures/corruption/: README.md
tests/fixtures/golden/: README.md
tests/fixtures/safety/: README.md
tests/fixtures/streaming/: README.md
tests/golden/: README.md
tests/integration/: README.md
tests/safety/: README.md
tests/scripts/: generate_golden_fixture.sh  run_distribution_smoke.sh  run_protocol_smoke.sh  run_roundtrip_smoke.sh  run_safety_smoke.sh  run_streaming_smoke.sh
tests/streaming/: README.md
(+122 files in other folders)
