[package]
name = "sfa-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
sfa-core = { path = "../sfa-core" }
sfa-unixfs = { path = "../sfa-unixfs" }
tempfile.workspace = true
walkdir.workspace = true
