[package]
name = "sfa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for SFA pack/unpack workflows"

[[bin]]
name = "sfa"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sfa-core = { path = "../sfa-core" }
sfa-unixfs = { path = "../sfa-unixfs" }
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
